Loads settings files OK

--- a/TC1K_LaserMonitor/TC1K_LaserMonitor.csproj
+++ b/TC1K_LaserMonitor/TC1K_LaserMonitor.csproj
@@ -109,6 +109,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="reporter.cs" />
+    <Compile Include="SettingsFileHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
