Updating screen, timer

--- a/TC1K_LaserMonitor/TC1K_LaserMonitor.csproj
+++ b/TC1K_LaserMonitor/TC1K_LaserMonitor.csproj
@@ -98,6 +98,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="optionSettings.csv" />
+    <None Include="Properties\DataSources\optionSettings.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
